--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -10,6 +10,11 @@
   <form method="POST" th:action="@{/orders}" th:object="${order}">
     <h1>Order your taco creations.</h1>
     <a th:href="@{/design}" id="another">Design another taco</a><br />
+    <ul>
+      <li th:each="taco : ${order.tacos}">
+        <span th:text="${taco.name}">taco name</span>
+      </li>
+    </ul>
     <div th:if="${#fields.hasErrors()}">
       <span class="validationError">
         Please correct the problems below and resubmit.
