--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -8,8 +8,12 @@
 </head>
 <body>
   <h1>Design your taco.</h1>
+  <!-- <h2>Hello, <span th:text="${user.fullname}">NAME</span>!</h2> -->
+  <form th:action="@{/logout}" id="logoutForm" method="post">
+    <input type="submit" value="Logout"/>
+  </form>
 
-  <form method="post" th:object="${taco}">
+  <form method="post" th:object="${taco}" th:action="@{/design}" id="tacoForm">
     <span class="validationError"
       th:if="${#fields.hasErrors('Ingredients')}"
       th:errors="*{Ingredients}"
