--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -7,7 +7,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <form method="POST" th:action="@{/orders}" th:object="${order}">
+  <form th:action="@{/logout}" id="logoutForm" method="post">
+    <input type="submit" value="Logout"/>
+  </form>
+  <form method="POST" th:action="@{/orders}" th:object="${order}" id="orderForm">
     <h1>Order your taco creations.</h1>
     <a th:href="@{/design}" id="another">Design another taco</a><br />
     <ul>
